# AutoGUI-v2

./: .gitignore  LICENSE  README.md  cog.yaml  pyproject.toml  requirements.txt
utils/data_utils/: misc.py  task_prompt_lib.py
utils/data_utils/autoguiv2/: README.md  annotate_functional_regions.py  build_corrected_hf_dataset.py  data_loaders.py  generate_eval_samples.py  misc.py  reannotate_func_after_fixing.py  remove_hashpostfix.py  split_region_anno_tree.py  visualize_corrected_dataset.py
utils/data_utils/autoguiv2/FuncElemGnd_eval_gen/: 1_make_func_elemgnd_samples.py  21_convert_elemgnd_to_hf_dataset.py  2_generate_func_elemgnd_questions.py  31_convert_elemcap_to_hf_dataset.py  3_generate_func_captioning_questions.py  4_calc_task_attributes.py  FILES_OVERVIEW.md  QUICKSTART.md  README_DATASET_CONVERSION.md  README_VISUALIZATION.md  WORKFLOW.md  visualize_questions.py
utils/data_utils/autoguiv2/FuncElemQA_eval_gen/: add_metrics_to_questions.py  convert_regcap_to_hf_dataset.py  convert_reggnd_to_hf_dataset.py  gen_region-func_multichoice-qa.py  gen_region-func_multichoice-qa_easy.py  gen_region-func_multichoice-qa_hard.py
utils/eval_utils/autoguiv2/: eval_androidcontrol_mp.py  eval_autoguiv1_mp.py  eval_elemgnd_mp.py  eval_elemref_mp.py  eval_funcregion_cap_mp.py  eval_funcregion_gnd_mp.py  eval_mind2web_mp.py  eval_osworldg_mp.py  eval_screenspotv2_mp.py  misc.py  prompt_lib.py
utils/openai_utils/: doubao.py  huggingface.py  jedi.py  misc.py  openai.py  parasail.py  qwen2vl.py  qwen3vl.py  silicon.py  stepfun.py
(+71 files in other folders)
